--- a/admin/frontend/package.json
+++ b/admin/frontend/package.json
@@ -1,37 +1,37 @@
 {
-  "name": "pickle-admin",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
-    "react-icons": "^4.8.0",
-    "axios": "^1.3.4",
-    "jwt-decode": "^3.1.2",
-    "react-hook-form": "^7.43.9",
-    "recharts": "^2.5.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.51.0",
-    "@typescript-eslint/parser": "^5.51.0",
-    "@vitejs/plugin-react": "^3.1.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.34.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
-    "typescript": "^4.9.4",
-    "vite": "^4.1.0"
-  }
+    "name":  "pickle-admin",
+    "private":  true,
+    "version":  "0.0.0",
+    "type":  "module",
+    "scripts":  {
+                    "dev":  "vite",
+                    "build":  "vite build",
+                    "lint":  "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+                    "preview":  "vite preview"
+                },
+    "dependencies":  {
+                         "react":  "^18.2.0",
+                         "react-dom":  "^18.2.0",
+                         "react-router-dom":  "^6.8.1",
+                         "react-icons":  "^4.8.0",
+                         "axios":  "^1.3.4",
+                         "jwt-decode":  "^3.1.2",
+                         "react-hook-form":  "^7.43.9",
+                         "recharts":  "^2.5.0"
+                     },
+    "devDependencies":  {
+                            "@types/react":  "^18.0.27",
+                            "@types/react-dom":  "^18.0.10",
+                            "@typescript-eslint/eslint-plugin":  "^5.51.0",
+                            "@typescript-eslint/parser":  "^5.51.0",
+                            "@vitejs/plugin-react":  "^3.1.0",
+                            "autoprefixer":  "^10.4.14",
+                            "eslint":  "^8.34.0",
+                            "eslint-plugin-react-hooks":  "^4.6.0",
+                            "eslint-plugin-react-refresh":  "^0.3.4",
+                            "postcss":  "^8.4.21",
+                            "tailwindcss":  "^3.2.7",
+                            "typescript":  "^4.9.4",
+                            "vite":  "^4.1.0"
+                        }
 }
